# wlbal

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: package-mac-local.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  cli_client.rs  config.rs  enforcer.rs  lib.rs  main.rs  telegram.rs  timer.rs  tray.rs
src/components/: AppManager.tsx  PhaseIndicator.tsx  Settings.tsx  Stats.tsx  TelegramManager.tsx  TelegramSurface.tsx  Timer.tsx  WebManager.tsx
src/hooks/: useTimer.ts
