[package]
name = "wlbal"
version = "0.1.0"
description = "Work-Leisure Balance desktop enforcer"
authors = ["wlbal"]
edition = "2021"
default-run = "wlbal-desktop"

[lib]
name = "wlbal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wlbal-desktop"
path = "src/main.rs"

[[bin]]
name = "wlbal"
path = "src/bin/wlbal_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
plist = "1"
libc = "0.2"
libloading = "0.8"
time = "=0.3.44"
